--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0,shirnk-to-fit=no" />
     <link rel="stylesheet" media="screen" href="./css/screen.css" />
     <link rel="icon" type="image/ico" href="./media/img/favicon.ico" />
+    <link rel="stylesheet" href="http://basehold.it/24" />
     <title>Ruben Estrada: Home</title>
   </head>
   <body>
@@ -19,13 +20,15 @@
         </ul>
       </nav>
     </header>
-    <section id="home">
-      <h1>Home</h1>
-      <p class="description">Hello there, from here you can get to any of the other three websites. Enjoy</p>
-      <figure class="gif">
-        <img src="./media/gif/hi.gif" alt="Gif of snail waving hi" />
-      </figure> 
-    </section>
+    <main class="content">
+      <section id="home">
+        <h1>Home</h1>
+        <p class="description">Hello there, from here you can get to any of the other three websites. Enjoy</p>
+        <figure class="gif">
+          <img src="./media/gif/hi.gif" alt="Gif of snail waving hi" />
+        </figure> 
+      </section>
+    </main>
     <footer>
       <p>Created by Ruben Estrada</p>
     </footer>
