--- a/places/index.html
+++ b/places/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
     <link rel="stylesheet" media="screen" href="../css/screen.css" />
     <link rel="icon" type="image/ico" href="../media/img/favicon.ico" />
+    <link rel="stylesheet" href="http://basehold.it/24" />
     <title>Ruben Estrada: Places</title>
     </style>
   </head>
@@ -20,114 +21,116 @@
         </ul>
       </nav>
     </header>
-    <h1>Adventure Time!</h1>
-    <section id="indiana-dunes">
-      <h2>Indiana Dunes</h2>
-      <p>
-        Indiana Dunes is a beautiful place. It has a park within the forest and places to have cookouts. Some of the trails can be really hard since the sand makes it harder to walk.
-        However, getting to the beach after finishing the trail makes it worth it.
-      </p>
-      <ul>
-        <li>
-          <figure class="photo">
-            <img src="../media/img/indiana-dunes1.jpg" alt="Picture of Indiana Dunes's'beach" />
-            <figcaption>
-              <p>
-                You can relax in the water after adventuring in the woods.
-              </p>
-            </figcaption>
-          </figure>
-        </li>
-        <li>
-          <figure class="photo">
-            <img src="../media/img/indiana-dunes2.jpg" alt="Picture of sand and view on top of a dune" />
-            <figcaption>
-              <p>
-                The views at the top of the dunes are amazing. You get to see how big the surrounding forest is and how close you are to the beach. 
-              </p>
-            </figcaption>
-          </figure>
-        </li>
-        <li>
-          <figure class="photo">
-            <img src="../media/img/indiana-dunes3.jpg" alt="Picture of a road that leads deeper into the forest" />
-            <figcaption>
-              <p>
-                Indiana Dunes is a big national park. Even just getting from one camp site to the other takes a while when walking.
-              </p>
-            </figcaption>
-          </figure>
-        </li>
-        <li>
-          <figure class="photo">
-            <img src="../media/img/indiana-dunes4.jpg" alt="Picture of trail inside the forest" />
-            <figcaption>
-              <p>
-                There are many trails inside Indiana Dunes. It is easy to get lost if you are not following the trails and signs. 
-              </p>
-            </figcaption>
-          </figure>
-        </li>
-      </ul>
-    </section>
-    <section id="starved-rock">
-      <h2>Starved Rock</h2>
-      <p>
-        Starved Rock is a must visit if you are in Illinois. It is bigger than Indiana Dunes and it has many beautiful areas. 
-      </p>
-      <ul>
-        <li>
-          <figure class="photo">
-            <img src="../media/img/starved-rock1.jpg" alt="Picture of a trail to a canyon" />
-            <figcaption>
-              <p>
-                The canyon water makes paths through the rocks.
-              </p>
-            </figcaption>
-          </figure>
-        </li>
-        <li>
-          <figure class="photo">
-            <img src="../media/img/starved-rock2.jpg" alt="Picture of the lake and dam" />
-            <figcaption>
-              <p>
-                Climbing to the top of the mountains gives you a nice view of the lake and dam. 
-              </p>
-            </figcaption>
-          </figure>
-        </li>
-        <li>
-          <figure class="photo">
-            <img src="../media/img/starved-rock3.jpg" alt="Picture of a small canyon" />
-            <figcaption>
-              <p>
-                There are canyons of different sices at Starved Rock. This is one of the smaller ones.
-              </p>
-            </figcaption>
-          </figure>
-        </li>
-        <li>
-          <figure class="photo">
-            <img src="../media/img/starved-rock4.jpg" alt="Picture of a big canyon" />
-            <figcaption>
-              <p>
-                This one is one of the bigger canyons. The falling water is very refreshing, specially in a sunny day.
-              </p>
-            </figcaption>
-          </figure>
-        </li>
-        <li>
-          <figure class="photo">
-            <img src="../media/img/starved-rock5.jpg" alt="Picture of the lake in the evening" />
-            <figcaption>
-              <p>
-                The lake looks beautiful during certain times of the day, evening being one of them.
-              </p>
-            </figcaption>
-          </figure>
-        </li>
-      </ul>
-    </section>
+    <main class="content">
+      <h1>Adventure Time!</h1>
+      <section id="indiana-dunes">
+        <h2>Indiana Dunes</h2>
+        <p>
+          Indiana Dunes is a beautiful place. It has a park within the forest and places to have cookouts. Some of the trails can be really hard since the sand makes it harder to walk.
+          However, getting to the beach after finishing the trail makes it worth it.
+        </p>
+        <ul>
+          <li>
+            <figure class="photo">
+              <img src="../media/img/indiana-dunes1.jpg" alt="Picture of Indiana Dunes's'beach" />
+              <figcaption>
+                <p>
+                  You can relax in the water after adventuring in the woods.
+                </p>
+              </figcaption>
+            </figure>
+          </li>
+          <li>
+            <figure class="photo">
+              <img src="../media/img/indiana-dunes2.jpg" alt="Picture of sand and view on top of a dune" />
+              <figcaption>
+                <p>
+                  The views at the top of the dunes are amazing. You get to see how big the surrounding forest is and how close you are to the beach. 
+                </p>
+              </figcaption>
+            </figure>
+          </li>
+          <li>
+            <figure class="photo">
+              <img src="../media/img/indiana-dunes3.jpg" alt="Picture of a road that leads deeper into the forest" />
+              <figcaption>
+                <p>
+                  Indiana Dunes is a big national park. Even just getting from one camp site to the other takes a while when walking.
+                </p>
+              </figcaption>
+            </figure>
+          </li>
+          <li>
+            <figure class="photo">
+              <img src="../media/img/indiana-dunes4.jpg" alt="Picture of trail inside the forest" />
+              <figcaption>
+                <p>
+                  There are many trails inside Indiana Dunes. It is easy to get lost if you are not following the trails and signs. 
+                </p>
+              </figcaption>
+            </figure>
+          </li>
+        </ul>
+      </section>
+      <section id="starved-rock">
+        <h2>Starved Rock</h2>
+        <p>
+          Starved Rock is a must visit if you are in Illinois. It is bigger than Indiana Dunes and it has many beautiful areas. 
+        </p>
+        <ul>
+          <li>
+            <figure class="photo">
+              <img src="../media/img/starved-rock1.jpg" alt="Picture of a trail to a canyon" />
+              <figcaption>
+                <p>
+                  The canyon water makes paths through the rocks.
+                </p>
+              </figcaption>
+            </figure>
+          </li>
+          <li>
+            <figure class="photo">
+              <img src="../media/img/starved-rock2.jpg" alt="Picture of the lake and dam" />
+              <figcaption>
+                <p>
+                  Climbing to the top of the mountains gives you a nice view of the lake and dam. 
+                </p>
+              </figcaption>
+            </figure>
+          </li>
+          <li>
+            <figure class="photo">
+              <img src="../media/img/starved-rock3.jpg" alt="Picture of a small canyon" />
+              <figcaption>
+                <p>
+                  There are canyons of different sices at Starved Rock. This is one of the smaller ones.
+                </p>
+              </figcaption>
+            </figure>
+          </li>
+          <li>
+            <figure class="photo">
+              <img src="../media/img/starved-rock4.jpg" alt="Picture of a big canyon" />
+              <figcaption>
+                <p>
+                  This one is one of the bigger canyons. The falling water is very refreshing, specially in a sunny day.
+                </p>
+              </figcaption>
+            </figure>
+          </li>
+          <li>
+            <figure class="photo">
+              <img src="../media/img/starved-rock5.jpg" alt="Picture of the lake in the evening" />
+              <figcaption>
+                <p>
+                  The lake looks beautiful during certain times of the day, evening being one of them.
+                </p>
+              </figcaption>
+            </figure>
+          </li>
+        </ul>
+      </section>
+    </main>
     <footer>
       <p>Created by Ruben Estrada</p>
     </footer>
