Split background paragraph and added shelly-text id

--- a/about/index.html
+++ b/about/index.html
@@ -30,7 +30,10 @@
           I feel bittersweet about graduating. I am looking forward to getting my degree but I am 
           not looking forward to working 40 hours each week for the rest of my life. I am a member 
           of the Omega Delta National Fraternity. Although I am currently the Treasurer, I have been 
-          the Vice President, and Risk Management positions in previous semesters. During high 
+          the Vice President, and Risk Management positions in previous semesters. 
+        </p>
+        <p>
+          During high 
           school, I was part of the chess club, robotics team, and tennis team. I was able to 
           participate in the state chess tournament. I also went to the First robotics competition 
           with the robotics team. It was a lot of fun. Both of these activities required strategy 
@@ -102,7 +105,7 @@
             </figure>
           </li>
           <li><h3>Shelly the turtle</h3>
-            <p>Shelly is a non violent turtle. She has never bit anyone before (at least that I know 
+            <p id="shelly-text">Shelly is a non violent turtle. She has never bit anyone before (at least that I know 
             of). She likes to roam around the house and only comes out when she wants food or water.
             </p>
             <figure class="video">
