Added footer id to fix footer padding

--- a/resume/index.html
+++ b/resume/index.html
@@ -169,7 +169,7 @@
         </ul>
       </section>
     </main>
-    <footer>
+    <footer id="resume-footer">
       <p>Created by Ruben Estrada</p>
     </footer>
   </div>
