Added ids to manipulate images

--- a/places/index.html
+++ b/places/index.html
@@ -30,7 +30,7 @@
           However, getting to the beach after finishing the trail makes it worth it.
         </p>
         <ul>
-          <li>
+          <li id="dunes1">
             <figure class="photo">
               <img src="../media/img/indiana-dunes1.jpg" alt="Picture of Indiana Dunes's'beach" />
               <figcaption>
@@ -40,7 +40,7 @@
               </figcaption>
             </figure>
           </li>
-          <li>
+          <li id="dunes2">
             <figure class="photo">
               <img src="../media/img/indiana-dunes2.jpg" alt="Picture of sand and view on top of a dune" />
               <figcaption>
@@ -51,7 +51,7 @@
             </figure>
           </li>
           <li>
-            <figure class="photo">
+            <figure id="dunes3" class="photo">
               <img src="../media/img/indiana-dunes3.jpg" alt="Picture of a road that leads deeper into the forest" />
               <figcaption>
                 <p>
@@ -60,7 +60,7 @@
               </figcaption>
             </figure>
           </li>
-          <li>
+          <li id="dunes4">
             <figure class="photo">
               <img src="../media/img/indiana-dunes4.jpg" alt="Picture of trail inside the forest" />
               <figcaption>
@@ -74,11 +74,11 @@
       </section>
       <section id="starved-rock">
         <h2>Starved Rock</h2>
-        <p>
+        <p id="starvedrock-text">
           Starved Rock is a must visit if you are in Illinois. It is bigger than Indiana Dunes and it has many beautiful areas. 
         </p>
         <ul>
-          <li>
+          <li id="starved1">
             <figure class="photo">
               <img src="../media/img/starved-rock1.jpg" alt="Picture of a trail to a canyon" />
               <figcaption>
@@ -88,7 +88,7 @@
               </figcaption>
             </figure>
           </li>
-          <li>
+          <li id="starved2">
             <figure class="photo">
               <img src="../media/img/starved-rock2.jpg" alt="Picture of the lake and dam" />
               <figcaption>
@@ -98,7 +98,7 @@
               </figcaption>
             </figure>
           </li>
-          <li>
+          <li id="starved3">
             <figure class="photo">
               <img src="../media/img/starved-rock3.jpg" alt="Picture of a small canyon" />
               <figcaption>
@@ -108,7 +108,7 @@
               </figcaption>
             </figure>
           </li>
-          <li>
+          <li id="starved4">
             <figure class="photo">
               <img src="../media/img/starved-rock4.jpg" alt="Picture of a big canyon" />
               <figcaption>
@@ -118,7 +118,7 @@
               </figcaption>
             </figure>
           </li>
-          <li>
+          <li id="starved5">
             <figure class="photo">
               <img src="../media/img/starved-rock5.jpg" alt="Picture of the lake in the evening" />
               <figcaption>
