Added to the starved rock description

--- a/places/index.html
+++ b/places/index.html
@@ -75,7 +75,7 @@
       <section id="starved-rock">
         <h2>Starved Rock</h2>
         <p id="starvedrock-text">
-          Starved Rock is a must visit if you are in Illinois. It is bigger than Indiana Dunes and it has many beautiful areas. 
+          Starved Rock is a must visit if you are in Illinois. It is bigger than Indiana Dunes and it has many beautiful areas. It is a few hours away from Chicago. I was not able to view all of it on my first visit. I plan on traveling there again and starting from the opposite end this time. 
         </p>
         <ul>
           <li id="starved1">
