Added github link, tel link, and resume pdf download

--- a/resume/index.html
+++ b/resume/index.html
@@ -24,8 +24,10 @@
       <h1 class="p-name">Ruben Estrada</h1> 
       <ul id="contact-info">
           <li><a class="u-email" id="email" href="mailto:restrad2@hawk.iit.edu">restrad2@hawk.iit.edu</a></li>
-          <li class="p-tel" id="phone-number">773-971-0662</li>
+          <li class="p-tel" id="phone-number"><a class="tel" href="tel:7739710662">+1-773-971-0662</a></li>
+          <li><a id="github" href="https://github.com/restrada25">GitHub</a></li>
           <li><a id="linkedin" href="https://www.linkedin.com/in/ruben-estrada-45351777">LinkedIn</a></li>
+          <li class="resume-pdf" id="resume-pdf"><a href="../media/pdf/rubenestradaresume.pdf">Download PDF</a></li>
       </ul>
     </header>
     <main class="content">
