Updated date for Viva Technology

--- a/resume/index.html
+++ b/resume/index.html
@@ -156,7 +156,7 @@
         <ul>
           <li><h3>Viva Technology</h3>
             <ul>
-              <li>March 2013-Present</li>
+              <li>March 2013-March 2016</li>
               <li>College Captain-Mentored groups of elementary and high school students through
               multiple challenges provided to them in order to increase their interest in the STEM field</li>
             </ul>
