Updated Education dates

--- a/resume/index.html
+++ b/resume/index.html
@@ -36,7 +36,7 @@
         <ul>
           <li><h3>Illinois Institute of Technology</h3>
             <ul>
-              <li>Graduating December 2016</li>
+              <li>August 2012-December 2016</li>
               <li>B.S. Computer Science</li>
               <li>Relevant Coursework
                 <ul>
