Changed home page to resume

--- a/index.html
+++ b/index.html
@@ -2,38 +2,177 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1.0,shirnk-to-fit=no" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
     <meta name="theme-color" content="#000000" />
-    <link rel="stylesheet" media="screen" href="./css/screen.css" />
-    <link rel="icon" type="image/ico" href="./media/img/favicon.ico" />
+    <link rel="stylesheet" media="screen" href="../css/screen.css" />
+    <link rel="icon" type="image/ico" href="../media/img/favicon.ico" />
 <!--     <link rel="stylesheet" href="http://basehold.it/22" /> -->
-    <title>Ruben Estrada: Home</title>
+
+    <title>Ruben Estrada: Resume</title>
   </head>
   <body>
   <div id="page">
     <header class="h-card" id="header">
       <nav class="nav">
         <ul>
-          <li id="active"><a href="./">Home</a></li>
-          <li><a href="./about/">About</a></li>
-          <li><a href="./resume/">Resume</a></li>
-          <li><a href="./places/">Places</a></li>
+          <li id="active"><a href="/">Resume</a></li>
+          <li><a href="../about/">About</a></li>
         </ul>
       </nav>
+      <h1 class="p-name">Ruben Estrada</h1> 
+      <ul id="contact-info">
+          <li><a class="u-email" id="email" href="mailto:restrad2@hawk.iit.edu">restrad2@hawk.iit.edu</a></li>
+          <li class="p-tel" id="phone-number"><a class="tel" href="tel:7739710662">+1-773-971-0662</a></li>
+          <li><a id="github" href="https://github.com/restrada25">GitHub</a></li>
+          <li><a id="linkedin" href="https://www.linkedin.com/in/ruben-estrada-45351777">LinkedIn</a></li>
+          <li class="resume-pdf" id="resume-pdf"><a href="../media/pdf/rubenestradaresume.pdf">Download PDF</a></li>
+      </ul>
     </header>
     <main class="content">
-      <section id="home">
-        <h1>Home</h1>
-        <p class="description">Hello there, from here you can get to any of the other three websites. Enjoy</p>
-        <figure class="gif">
-          <img src="./media/gif/hi.gif" alt="Gif of snail waving hi" />
-        </figure> 
+      <section id="education">
+        <h2>Education</h2>
+        <ul>
+          <li><h3>Illinois Institute of Technology</h3>
+            <ul>
+              <li>August 2012-December 2016</li>
+              <li>B.S. Computer Science</li>
+              <li>Relevant Coursework
+                <ul>
+                  <li>Object Oriented Design Programming</li>
+                  <li>Systems Programming</li>
+                  <li>Software Engineering</li>
+                  <li>Data Structures &amp; Algorithms</li>
+                  <li>Database Organization</li>
+                  <li>Fundamentals of Web Development</li>
+                  <li>Introduction to Wireless Networks &amp; Performance</li>
+                </ul>
+              </li>
+            </ul>
+          </li>
+        </ul>
+      </section>
+      <section id="work-experience">
+        <h2>Work Experience</h2>
+        <ul>
+          <li><h3>Construction CAD Solutions</h3>
+            <ul>
+              <li>March 2015-Present</li>
+              <li>Willowbrook, IL</li>
+              <li>CAD Tech
+                <ul>
+                  <li>Design Base CADs, Permit CADs, Railroad CADs using:
+                    <ul>
+                      <li>AutoCAD</li>
+                      <li>County GISs</li>
+                      <li>Google Earth/Maps</li>
+                      <li>Information Retrieval Files</li>
+                    </ul>
+                  </li>
+                  <li>Quality check permits and complete revisions</li>
+                </ul>
+              </li>
+            </ul>
+          </li>
+          <li><h3>Exelon Summer Institute</h3>
+            <ul>
+              <li>June 2014-August 2015</li>
+              <li>Chicago, IL</li>
+              <li>Teacher Assistant
+                <ul>
+                  <li>Instructed and tutored incoming IIT freshmen in the concepts of Java and programmed Arduino robots. Concepts taught include:
+                    <ul>
+                      <li>Data types</li>
+                      <li>Loops</li>
+                      <li>Arrays</li>
+                    </ul>
+                  </li>
+                </ul>
+              </li>
+            </ul>
+          </li>
+          <li><h3>Freelance Coder Camp</h3>
+            <ul>
+              <li>June 2014-August 2015</li>
+              <li>Chicago, IL</li>
+              <li>Teacher Assistant
+                <ul>
+                  <li>Instructed high school students in the concepts of Java and programmed Arduino robots. Concepts taught include:
+                    <ul>
+                      <li>Data types</li>
+                      <li>Loops</li>
+                      <li>Arrays</li>
+                    </ul>
+                  </li>
+                  <li>Assisted the students with HTML, CSS, and PHP</li>
+                </ul>
+              </li>
+            </ul>
+          </li>
+        </ul>
+      </section>
+      <section id="skills">
+        <h2>Skills</h2>
+        <ul>
+          <li><h3>Programming Languages</h3>
+            <ul>
+              <li>Java</li>
+              <li>MySQL</li>
+              <li>Python</li>
+              <li>C</li>
+              <li>HTML</li>
+              <li>XML</li>
+              <li>Haskell</li>
+            </ul>
+          </li>
+          <li><h3>Development</h3>
+            <ul>
+              <li>Git Version Control</li>
+              <li>Unit Testing</li>
+              <li>RESTFul Interface</li>
+              <li>UML Diagrams</li>
+            </ul>
+          </li>
+          <li><h3>Software</h3>
+            <ul>
+              <li>AutoCAD</li>
+              <li>Photoshop</li>
+            </ul>
+          </li>
+        </ul>
+      </section>
+      <section id="awards">
+        <h2>Awards</h2>
+        <ul>
+          <li>STEM+ Scholarship</li>
+          <li>Heald Scholarship</li>
+          <li>Protiviti Scholarship</li>
+          <li>Chicago Engineers Foundation Scholarship</li>
+        </ul>
+      </section>
+      <section id="volunteer-work">
+        <h2>Volunteer Work</h2>
+        <ul>
+          <li><h3>Viva Technology</h3>
+            <ul>
+              <li>March 2013-March 2016</li>
+              <li>College Captain-Mentored groups of elementary and high school students through
+              multiple challenges provided to them in order to increase their interest in the STEM field</li>
+            </ul>
+          </li>
+          <li><h3>FreeGeek Chicago</h3>
+            <ul>
+              <li>November 2014-September 2015</li>
+              <li>Took apart donated computers and recycled them to provide functional computers to 
+              those who want them</li>
+            </ul>
+          </li>
+        </ul>
       </section>
     </main>
-    <footer>
+    <footer id="resume-footer">
       <p>Created by Ruben Estrada</p>
     </footer>
   </div>
-  <script src="./js/modernizr.js"></script>
+  <script src="../js/modernizr.js"></script>
   </body>
 </html>
