--- a/about/index.html
+++ b/about/index.html
@@ -14,10 +14,8 @@
     <header class="h-card" id="header">
       <nav class="nav">
         <ul>
-          <li><a href="../">Home</a></li>
+          <li><a href="../">Resume</a></li>
           <li id="active"><a href="../about/">About</a></li>
-          <li><a href="../resume/">Resume</a></li>
-          <li><a href="../places/">Places</a></li>
         </ul>
       </nav>
     </header>
